--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/SafetyConnect.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#092f57" />
     <meta
       name="description"
-      content="DriverSafety - Comprehensive operations, safety, and combined KPIs for logistics efficiency and driver behavior analysis"
+      content="Driver Safety Dashboard - Modern fleet management and safety analytics"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/SafetyConnect_logo.png" />
+
+    <!-- Inter Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
